# mybtrfs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DELIVERY-v1.1.md  README.md  RULES.md  SHIPPING-CHECKLIST-v1.1.md  mybtrfs.1
.github/workflows/: ci.yml  coverage.yml
contrib/: DEMO.md  README-DEMOS.md  README.md  coverage.sh  demo-cli-integration.sh  demo-phase1-retention-preview.sh  demo-phase2-status-view.sh  demo-phase3-snapshot-diff.sh  demo-real-output.rs  demo-show-actual-output.sh  demo-with-output.sh  example.backup-set.toml  setup-local-backup-env.sh  simulate-backup-workflow.sh
contrib/cron/: mybtrfs.crontab
contrib/systemd/: mybtrfs-backup.service  mybtrfs-backup.timer  mybtrfs.env.example
contrib/test/: mybtrfs-progress-demo.sh  mybtrfs-quiet-demo.sh  mybtrfs-ssh-smoke.sh
crates/adapters/: Cargo.toml
crates/adapters/src/: backup_set.rs  btrfs_cli.rs  clock.rs  command.rs  drive_discovery.rs  journal.rs  lib.rs  local_fs.rs  lock.rs  mounts.rs  progress.rs  prompter.rs  raw_stream.rs  ssh.rs
crates/adapters/src/btrfs_cli/: parse.rs
crates/application/: Cargo.toml
crates/application/src/: backup.rs  diff.rs  inventory.rs  lib.rs  local_subvolumes.rs  ports.rs  prune.rs  restore.rs  retention.rs  retention_preview.rs  status.rs
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  main.rs
crates/cli/tests/: backup_set.rs  cli_behavior.rs  diff_btrbk_schedule.rs  e2e.rs  retention_preview_e2e.rs  status_e2e.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs  model.rs  naming.rs  parent.rs  retention.rs  safety.rs
documentation/: 01-phases-design-v2.md  01-phases-design.md  02-architecture-v2.md  02-architecture.md  03-review-and-corrections.md  04-coding-guidelines.md  05-e2e-test-spec.md  06-differential-oracle-test-spec.md  07-implementation-decisions.md  08-phase5-design.md  09-roadmap.md  10-v1x-plan.md  11-raw-encrypted-targets.md
man/: mybtrfs-diff.1  mybtrfs-list.1  mybtrfs-prune.1  mybtrfs-restore.1  mybtrfs-resume.1  mybtrfs-run.1  mybtrfs-snapshot.1  mybtrfs-stats.1  mybtrfs-status.1  mybtrfs.1
quality/coding/: 001-model.md  002-naming.md  003-parent.md  004-retention.md  005-adapters-lib.md  006-cli-main.md  007-workspace-clippy-pedantic.md  INDEX.md
quality/coding/fixes/: 001-pass1-fixes.md  002-pass2-fixes.md  003-pass3-fixes.md
scripts/: run-diff-btrbk.sh  run-e2e.sh
src/: error.rs  lib.rs  main.rs
src/adapters/: drive_discovery.rs  journal.rs  local_fs.rs  mod.rs  prompter.rs
src/app/: backup.rs  inventory.rs  mod.rs
src/cli/: mod.rs
src/domain/: model.rs  naming.rs  parent.rs  retention.rs  safety.rs
src/ports/: mod.rs
