# Workspace root — hexagonal layering enforced by crate boundaries:
#   cli → adapters → application → domain   (dependencies point inward).
[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
authors = ["jvidal86"]
repository = "https://github.com/jvidal86/mybtrfs"

[workspace.dependencies]
# External
anyhow = "1.0.102"
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive"] }
regex = "1.12.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
# Internal (layer crates)
mybtrfs-domain = { path = "crates/domain" }
mybtrfs-application = { path = "crates/application" }
mybtrfs-adapters = { path = "crates/adapters" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
