[package]
name = "mybtrfs-adapters"
description = "Driven adapters for mybtrfs (btrfs CLI, local filesystem, drive discovery, ...)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
mybtrfs-domain.workspace = true
mybtrfs-application.workspace = true
# External deps (serde/serde_json/chrono/anyhow/thiserror) are added as each
# adapter is implemented.

[lints]
workspace = true
