[package]
name = "mybtrfs-adapters"
description = "Driven adapters for mybtrfs (btrfs CLI, local filesystem, drive discovery, ...)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
mybtrfs-domain.workspace = true
mybtrfs-application.workspace = true
indicatif.workspace = true
log.workspace = true
regex.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
# Other external deps (anyhow/thiserror) are added as each adapter is implemented.

[dev-dependencies]
env_logger.workspace = true

[lints]
workspace = true
