[package]
name = "mybtrfs-application"
description = "Application use cases and ports for mybtrfs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
mybtrfs-domain.workspace = true
chrono.workspace = true
log.workspace = true
thiserror.workspace = true

[lints]
workspace = true
