[package]
name = "mybtrfs"
description = "A backup tool for btrfs subvolumes (a Rust reimagining of btrbk)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
mybtrfs-domain.workspace = true
mybtrfs-application.workspace = true
mybtrfs-adapters.workspace = true
clap.workspace = true
anyhow.workspace = true
env_logger.workspace = true
log.workspace = true

[dev-dependencies]
# The differential-conformance test (tests/diff_btrbk_schedule.rs) drives the
# domain retention scheduler directly and builds reference instants.
mybtrfs-domain.workspace = true
chrono.workspace = true

[lints]
workspace = true
